derive_tests/tests/compile_fail/no_validations.stderr
error: Invalid attribute #[validate] on field `s`: Needs at least one validator
 --> tests/compile_fail/no_validations.rs:5:5
  |
5 |     #[validate()]
  |     ^
